# wasm-bench

./: Cargo.toml  benchmark-gzip.js  benchmark-png.js  benchmark-sha.js  build-all.ps1  build-all.sh  gzip.html  home.html  index.html  package.json  png.html  pnpm-lock.yaml  server.js  sha256.html  vite.config.js  xd.js  zlib.cjs
docs/: gzip.html  index.html  png.html  sha256.html
docs/assets/: benchmark-gzip-21F1XxKv.js  benchmark-gzip-BA8evatM.js  benchmark-gzip-BBPgadht.js  benchmark-gzip-CclsjkOV.js  benchmark-gzip-D1_KDwz2.js  benchmark-gzip-OKH_cUGX.js  benchmark-gzip-WeXywC32.js  benchmark-gzip-Y8bItFqe.js  benchmark-gzip-gWgY_kpg.js  benchmark-png-B-ZxtfqU.js  benchmark-png-B-wcYGan.js  benchmark-png-B0HDd4LZ.js  benchmark-png-BVtF0NN7.js  benchmark-png-BvDE_UtG.js  benchmark-png-C2ABCp3R.js  benchmark-png-CGCPhsfG.js  benchmark-png-CPbdDxKr.js  benchmark-png-Cb6mDb8H.js  benchmark-png-CphfbVy6.js  benchmark-png-D5xJ_Gup.js  benchmark-png-D8VAfBiM.js  benchmark-sha-1DMZJvX0.js  benchmark-sha-B1lnpHr5.js  benchmark-sha-B3wmJ0hN.js  benchmark-sha-Blq6a8fx.js  benchmark-sha-C13UiscV.js  benchmark-sha-CAT8VR_H.js  benchmark-sha-CdqARPOZ.js  benchmark-sha-CfupJDqi.js  benchmark-sha-DVLizPyY.js  benchmark-sha-DqF0Vbn_.js  gzip-BWUJYu_t.js  gzip-BjYJX0zL.js  gzip-BkbyihCI.js  gzip-Bltc-uvI.js  gzip-BmCQbxnf.js  gzip-C2SNONTH.js  gzip-Ch53eDWP.js  gzip-CpoZF-IS.js  gzip-LQRsWPCt.js  (+36 more)
gzip-wasm/: Cargo.toml
gzip-wasm/src/: lib.rs
pkg/: package.json  sha_was.d.ts  sha_was.js  sha_was_bg.js  sha_was_bg.wasm  sha_was_bg.wasm.d.ts
pkg-png64/: png_wasm.js  png_wasm_bg.wasm
png-wasm/: Cargo.toml
png-wasm/src/: lib.rs
src/: lib.rs
