[package]
name = "png-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
png = "0.17"
wasm-bindgen = "0.2.84"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  '--type-ssa',
  '-O4',
  '--gufa',
  '-O4',
  '--gufa',
  '--type-merging',
  '-O4',
  '--closed-world',
  '--enable-relaxed-simd',
  '--enable-simd',
  '--enable-memory64',
  '--enable-threads',
  '--enable-mutable-globals',
  '--enable-bulk-memory',
  '--strip',
  "--flexible-inline-max-function-size",
  "4294967295",
]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false
